--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = postgresql://postgres.qlriwbqtwavtewzuigac:jfCtJ1YW5Fa8sXoU@aws-1-ap-southeast-2.pooler.supabase.com:5432/postgres
+JWT_SECRET = Ripple
